--- a/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
+++ b/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
@@ -1,44 +1,62 @@
 <ng-template #toastContainer></ng-template>
 <div class="container-pillbox">
-	<h2 class="font-bold text-2xl pb- 4">Lista de Medicamentos</h2>
+	<div class="flex flex-row items-center justify-between">
+		<h2 class="font-bold text-2xl">Lista dos Medicamentos</h2>
+		<button
+			type="button"
+			routerLink="/dashboard/medication"
+			routerLinkActive="active"
+			class="flex w-auto justify-center rounded-md bg-blue-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
+		>
+			+ Adicionar Novo Medicamento
+		</button>
+	</div>
 
 	<!-- Table Medications -->
 	<div class="relative mt-4 rounded-lg overflow-x-scroll border-2">
 		<table class="min-w-full divide-y divide-gray-200">
 			<thead class="bg-gray-50 sticky top-0 z-10">
 				<tr>
-					@for (title of tableHeaders; track $index) {
+					@for (title of tableHeaders; track $index) { @if ($index%2
+					== 0) {
+					<th
+						scope="col"
+						class="px-6 py-3 text-left text-xs font-medium bg-gray-300 text-gray-500 uppercase tracking-wider"
+					>
+						{{ title }}
+					</th>
+					} @else {
 					<th
 						scope="col"
 						class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
 					>
 						{{ title }}
 					</th>
-					}
+					} }
 				</tr>
 			</thead>
 			<tbody class="bg-white divide-y divide-gray-200">
 				@for (alarm of alarms; track $index) {
 				<tr>
-					<td class="px-6 py-4 whitespace-nowrap">
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.name }}
 					</td>
 					<td class="px-6 py-4 whitespace-nowrap">
 						{{ alarm.alarms }}
 					</td>
-					<td class="px-6 py-4 whitespace-nowrap">
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.quantity_will_use }}
 					</td>
 					<td class="px-6 py-4 whitespace-nowrap">
 						{{ alarm.quantity_compartment }}
 					</td>
-					<td class="px-6 py-4 whitespace-nowrap">
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.compartiment }}
 					</td>
 					<td class="px-6 py-4 whitespace-nowrap">
 						{{ alarm.days_of_week }}
 					</td>
-					<td class="px-6 py-4 whitespace-nowrap">
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.state }}
 					</td>
 					<td class="px-6 py-4">
