--- a/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
+++ b/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
@@ -13,36 +13,36 @@
 	</div>
 
 	<!-- Table Medications -->
-	<div class="relative mt-4 rounded-lg overflow-x-scroll border-2">
-		<table class="min-w-full divide-y divide-gray-200">
+	<div class="relative mt-4 rounded-lg overflow-x-scroll shadow-md border-2">
+		<table class="table-fixed w-auto divide-y divide-gray-400">
 			<thead class="bg-gray-50 sticky top-0 z-10">
 				<tr>
 					@for (title of tableHeaders; track $index) { @if ($index%2
 					== 0) {
 					<th
 						scope="col"
-						class="px-6 py-3 text-left text-xs font-medium bg-gray-300 text-gray-500 uppercase tracking-wider"
+						class="px-6 py-3 text-center text-xs font-medium bg-gray-300 text-gray-500 uppercase tracking-wider"
 					>
 						{{ title }}
 					</th>
 					} @else {
 					<th
 						scope="col"
-						class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+						class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider"
 					>
 						{{ title }}
 					</th>
 					} }
 				</tr>
 			</thead>
-			<tbody class="bg-white divide-y divide-gray-200">
+			<tbody class="bg-white divide-y divide-gray-400 text-center">
 				@for (alarm of alarms; track $index) {
 				<tr>
 					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.name }}
 					</td>
-					<td class="px-6 py-4 whitespace-nowrap">
-						{{ alarm.alarms }}
+					<td class="px-6 py-4">
+						{{ alarm.alarms | newline }}
 					</td>
 					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.quantity_will_use }}
@@ -53,8 +53,8 @@
 					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.compartiment }}
 					</td>
-					<td class="px-6 py-4 whitespace-nowrap">
-						{{ alarm.days_of_week }}
+					<td class="px-6 py-4">
+						{{ alarm.days_of_week | newline }}
 					</td>
 					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
 						{{ alarm.state }}
