--- a/src/app/modules/dashboard/components/calendar-week/calendar-week.component.css
+++ b/src/app/modules/dashboard/components/calendar-week/calendar-week.component.css
@@ -3,12 +3,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #fff;
 	border-radius: 20px;
-	border: 1px solid #ddd;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	color: #212529;
-	padding: 16px;
+	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.85);
+	color: #000;
 	width: 100%;
 	height: 100%;
 }
@@ -30,18 +27,9 @@
 /* Header */
 .header {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	width: 100%;
-}
-
-/* MonthYearTitle - Você pode adicionar estilos aqui se precisar */
-
-/* NavigationButton */
-.navigation-button {
-	background: none;
-	border: none;
-	cursor: pointer;
 }
 
 /* WeekContainer */
@@ -49,7 +37,8 @@
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	padding: 16px 0;
+	padding: 16px;
+	text-align: center;
 }
 
 /* Day */
@@ -62,22 +51,12 @@
 	font-size: 16px;
 	font-weight: 500;
 	cursor: pointer;
-	padding: 8px;
+	color: white; /* Substitua pela sua cor de destaque */
 	border-radius: 4px;
 	transition: background-color 0.3s;
 }
 
 .day.selected {
-	background-color: #007bff; /* Substitua pela sua cor de destaque */
-	color: white;
-}
-
-/* WeekBody */
-.week-body {
-	width: 100%;
-	height: calc(100% - 40px);
-	overflow: scroll;
-	overflow-x: hidden;
-	scrollbar-width: inherit;
-	scrollbar-color: #c1c1c1 #f0f0f0;
+	background-color: white; /* Substitua pela sua cor de destaque */
+	color: #007bff;
 }
