fix: ajustado o style.

--- a/src/app/modules/dashboard-prices/dashboard-prices.component.html
+++ b/src/app/modules/dashboard-prices/dashboard-prices.component.html
@@ -22,7 +22,7 @@
 				<button class="py-1 px-4 focus:outline-none">Annually</button>
 			</div>
 		</div>
-		<div class="flex flex-wrap -m-4">
+		<div class="flex flex-wrap m-4">
 			<div class="p-4 xl:w-1/4 md:w-1/2 w-full">
 				<div
 					class="h-full p-6 rounded-lg border-2 border-gray-300 flex flex-col relative overflow-hidden"
