--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -44,11 +44,13 @@
 			class="container h-full w-2/3 flex md:flex-row flex-col items-center justify-center"
 		>
 			<!-- Image Hero -->
-			<div class="lg:max-w-lg lg:w-full md:w-1/2 w-1/2 mb-10 md:mb-0">
+			<div
+				class="lg:max-w-lg lg:w-full md:w-1/2 h-5/6 w-1/2 mb-10 md:mb-0"
+			>
 				<img
-					class="object-cover object-center rounded"
+					class="object-contain h-full w-full object-right pr-8"
 					alt="hero"
-					src="https://puffcount.com/images/appss1.png"
+					src="../../../assets/images/Home-Screen.png"
 				/>
 			</div>
 
