--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -403,306 +403,6 @@
 		</div>
 	</section>
 
-	<!-- Contact Us -->
-	<section class="text-gray-600 body-font relative">
-		<div class="container px-5 py-24 mx-auto">
-			<div class="flex flex-col text-center w-full mb-12">
-				<h1
-					class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"
-				>
-					Contact Us
-				</h1>
-				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">
-					Whatever cardigan tote bag tumblr hexagon brooklyn
-					asymmetrical gentrify.
-				</p>
-			</div>
-			<div class="lg:w-1/2 md:w-2/3 mx-auto">
-				<div class="flex flex-wrap -m-2">
-					<div class="p-2 w-1/2">
-						<div class="relative">
-							<label
-								for="name"
-								class="leading-7 text-sm text-gray-600"
-								>Name</label
-							>
-							<input
-								type="text"
-								id="name"
-								name="name"
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-							/>
-						</div>
-					</div>
-					<div class="p-2 w-1/2">
-						<div class="relative">
-							<label
-								for="email"
-								class="leading-7 text-sm text-gray-600"
-								>Email</label
-							>
-							<input
-								type="email"
-								id="email"
-								name="email"
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
-							/>
-						</div>
-					</div>
-					<div class="p-2 w-full">
-						<div class="relative">
-							<label
-								for="message"
-								class="leading-7 text-sm text-gray-600"
-								>Message</label
-							>
-							<textarea
-								id="message"
-								name="message"
-								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
-							></textarea>
-						</div>
-					</div>
-					<div class="p-2 w-full">
-						<button
-							class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
-						>
-							Button
-						</button>
-					</div>
-					<div
-						class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center"
-					>
-						<a class="text-indigo-500">example&#64;email.com</a>
-						<p class="leading-normal my-5">
-							49 Smith St. <br />Saint Cloud, MN 56301
-						</p>
-						<span class="inline-flex">
-							<a class="text-gray-500">
-								<svg
-									fill="currentColor"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="2"
-									class="w-5 h-5"
-									viewBox="0 0 24 24"
-								>
-									<path
-										d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"
-									></path>
-								</svg>
-							</a>
-							<a class="ml-4 text-gray-500">
-								<svg
-									fill="currentColor"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="2"
-									class="w-5 h-5"
-									viewBox="0 0 24 24"
-								>
-									<path
-										d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
-									></path>
-								</svg>
-							</a>
-							<a class="ml-4 text-gray-500">
-								<svg
-									fill="none"
-									stroke="currentColor"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="2"
-									class="w-5 h-5"
-									viewBox="0 0 24 24"
-								>
-									<rect
-										width="20"
-										height="20"
-										x="2"
-										y="2"
-										rx="5"
-										ry="5"
-									></rect>
-									<path
-										d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"
-									></path>
-								</svg>
-							</a>
-							<a class="ml-4 text-gray-500">
-								<svg
-									fill="currentColor"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="2"
-									class="w-5 h-5"
-									viewBox="0 0 24 24"
-								>
-									<path
-										d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"
-									></path>
-								</svg>
-							</a>
-						</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- FOOTER -->
-	<footer class="text-gray-600 body-font">
-		<div
-			class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col"
-		>
-			<div
-				class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left"
-			>
-				<a
-					class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
-				>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						fill="none"
-						stroke="currentColor"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						stroke-width="2"
-						class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-						viewBox="0 0 24 24"
-					>
-						<path
-							d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-						></path>
-					</svg>
-					<span class="ml-3 text-xl">Tailblocks</span>
-				</a>
-				<p class="mt-2 text-sm text-gray-500">
-					Air plant banjo lyft occupy retro adaptogen indego
-				</p>
-			</div>
-			<div
-				class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
-			>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</footer>
 	<section class="text-gray-600 body-font overflow-hidden">
 		<div class="container px-5 py-24 mx-auto">
 			<div class="flex flex-col text-center w-full mb-20">
@@ -1375,6 +1075,237 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Contact Us -->
+	<section class="text-white body-font relative bg-blue-600">
+		<div class="container px-5 py-24 mx-auto">
+			<div class="flex flex-col text-center w-full mb-12">
+				<h1
+					class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white"
+				>
+					Fale Conosco
+				</h1>
+				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+					Mande sua mensagem ou dúvida para nós e entraremos em
+					contato assim que possível.
+				</p>
+			</div>
+			<form
+				[formGroup]="sendMenssageForm"
+				(ngSubmit)="onSubmitMenssage()"
+				class="lg:w-1/2 md:w-2/3 mx-auto"
+			>
+				<div class="flex flex-wrap -m-2">
+					<div class="p-2 w-1/2">
+						<div class="relative">
+							<label
+								for="name"
+								class="leading-7 text-sm text-white"
+								>Nome</label
+							>
+							<input
+								type="text"
+								id="name"
+								name="name"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+							/>
+						</div>
+					</div>
+					<div class="p-2 w-1/2">
+						<div class="relative">
+							<label
+								for="email"
+								class="leading-7 text-sm text-white"
+								>Email</label
+							>
+							<input
+								type="email"
+								id="email"
+								name="email"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
+							/>
+						</div>
+					</div>
+					<div class="p-2 w-full">
+						<div class="relative">
+							<label
+								for="message"
+								class="leading-7 text-sm text-white"
+								>Mensagem</label
+							>
+							<textarea
+								id="message"
+								name="message"
+								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
+							></textarea>
+						</div>
+					</div>
+					<div class="pt-8 w-full">
+						<button
+							type="submit"
+							class="flex w-auto mx-auto justify-center rounded-md bg-white px-8 py-2 text-sm font-semibold leading-6 text-blue-600 shadow-sm hover:bg-blue-500 hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
+						>
+							Enviar
+						</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</section>
+
+	<!-- FOOTER -->
+	<footer class="text-gray-600 body-font">
+		<div
+			class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col"
+		>
+			<div
+				class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left"
+			>
+				<a
+					class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
+				>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						stroke="currentColor"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
+						viewBox="0 0 24 24"
+					>
+						<path
+							d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
+						></path>
+					</svg>
+					<span class="ml-3 text-xl">Tailblocks</span>
+				</a>
+				<p class="mt-2 text-sm text-gray-500">
+					Air plant banjo lyft occupy retro adaptogen indego
+				</p>
+			</div>
+			<div
+				class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
+			>
+				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+					<h2
+						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
+					>
+						CATEGORIES
+					</h2>
+					<nav class="list-none mb-10">
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>First Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Second Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Third Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Fourth Link</a
+							>
+						</li>
+					</nav>
+				</div>
+				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+					<h2
+						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
+					>
+						CATEGORIES
+					</h2>
+					<nav class="list-none mb-10">
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>First Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Second Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Third Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Fourth Link</a
+							>
+						</li>
+					</nav>
+				</div>
+				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+					<h2
+						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
+					>
+						CATEGORIES
+					</h2>
+					<nav class="list-none mb-10">
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>First Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Second Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Third Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Fourth Link</a
+							>
+						</li>
+					</nav>
+				</div>
+				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+					<h2
+						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
+					>
+						CATEGORIES
+					</h2>
+					<nav class="list-none mb-10">
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>First Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Second Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Third Link</a
+							>
+						</li>
+						<li>
+							<a class="text-gray-600 hover:text-gray-800"
+								>Fourth Link</a
+							>
+						</li>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<div class="bg-gray-100">
 		<div
 			class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row"
