--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -131,17 +131,17 @@
 
 	<!-- EVNVIAR EMAIL PARA NOSSO -->
 	<section class="text-gray-600 body-font">
-		<div class="container px-5 py-24 mx-auto">
+		<form class="container px-5 py-24 mx-auto">
 			<div class="flex flex-col text-center w-full mb-12">
 				<h1
 					class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"
 				>
-					Master Cleanse Reliac Heirloom
+					Aster Pillbox para Profissionais
 				</h1>
 				<p class="lg:w-2/3 mx-auto leading-relaxed text-base">
-					Whatever cardigan tote bag tumblr hexagon brooklyn
-					asymmetrical gentrify, subway tile poke farm-to-table.
-					Franzen you probably haven't heard of them man bun deep.
+					Deixe seu dado de contato e entraremos em contato para
+					apresentar todos os benefícios do Aster Pillbox para sua
+					prática profissional.
 				</p>
 			</div>
 			<div
@@ -151,33 +151,37 @@
 					<label
 						for="full-name"
 						class="leading-7 text-sm text-gray-600"
-						>Full Name</label
+						>Nome Completo</label
 					>
 					<input
 						type="text"
 						id="full-name"
 						name="full-name"
+						placeholder="Sidnei de Souza Junior"
 						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
 				</div>
 				<div class="relative flex-grow w-full">
 					<label for="email" class="leading-7 text-sm text-gray-600"
-						>Email</label
+						>E-mail para Contato</label
 					>
 					<input
 						type="email"
 						id="email"
 						name="email"
+						placeholder="contato@astertech.site"
 						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
 				</div>
+
 				<button
-					class="text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg"
+					type="submit"
+					class="flex w-auto justify-center rounded-md bg-blue-600 px-8 py-2 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 				>
-					Button
+					Solicitar
 				</button>
 			</div>
-		</div>
+		</form>
 	</section>
 
 	<!-- FUNCIONALIDADES -->
@@ -405,7 +409,7 @@
 
 	<!-- PRICING -->
 	<section class="text-gray-600 body-font overflow-hidden">
-		<div class="container px-5 py-24 mx-auto">
+		<div class="container px-5 pt-12 mx-auto">
 			<div class="flex flex-col text-center w-full mb-20">
 				<h1
 					class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900"
@@ -653,9 +657,10 @@
 
 	<!-- SHOW SCREENS APP -->
 	<section class="text-gray-600 body-font">
-		<div class="container px-5 py-24 mx-auto flex flex-wrap">
+		<div class="container px-5 pb-12 mx-auto flex flex-wrap">
 			<div class="flex flex-wrap w-full">
 				<div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
+					<!-- STEP 1 -->
 					<div class="flex relative pb-12">
 						<div
 							class="h-full w-10 absolute inset-0 flex items-center justify-center"
@@ -685,15 +690,17 @@
 							<h2
 								class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider"
 							>
-								STEP 1
+								Monitoramento da Tomada de Medicação
 							</h2>
 							<p class="leading-relaxed">
-								VHS cornhole pop-up, try-hard 8-bit iceland
-								helvetica. Kinfolk bespoke try-hard cliche palo
-								santo offal.
+								Funcionalidade essencial para todos os usuários,
+								permitindo o registro básico do uso de
+								medicamentos.
 							</p>
 						</div>
 					</div>
+
+					<!-- STEP 2 -->
 					<div class="flex relative pb-12">
 						<div
 							class="h-full w-10 absolute inset-0 flex items-center justify-center"
@@ -721,12 +728,11 @@
 							<h2
 								class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider"
 							>
-								STEP 2
+								Visualização do Histórico de Medicação
 							</h2>
 							<p class="leading-relaxed">
-								Vice migas literally kitsch +1 pok pok. Truffaut
-								hot chicken slow-carb health goth, vape
-								typewriter.
+								Permite que o usuário acompanhe seu próprio
+								histórico, incentivando o uso do aplicativo.
 							</p>
 						</div>
 					</div>
@@ -760,11 +766,12 @@
 							<h2
 								class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider"
 							>
-								STEP 3
+								Lembretes Personalizados de Medicação
 							</h2>
 							<p class="leading-relaxed">
-								Coloring book nar whal glossier master cleanse
-								umami. Salvia +1 master cleanse blog taiyaki.
+								Recurso importante para garantir a adesão ao
+								tratamento, tornando o aplicativo útil para o
+								dia a dia.
 							</p>
 						</div>
 					</div>
@@ -798,12 +805,12 @@
 							<h2
 								class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider"
 							>
-								STEP 4
+								Gerenciamento de Estoque de Medicamentos
 							</h2>
 							<p class="leading-relaxed">
-								VHS cornhole pop-up, try-hard 8-bit iceland
-								helvetica. Kinfolk bespoke try-hard cliche palo
-								santo offal.
+								Funcionalidade avançada que agrega valor ao
+								plano pago, ajudando o usuário a controlar seus
+								medicamentos.
 							</p>
 						</div>
 					</div>
@@ -830,11 +837,12 @@
 							<h2
 								class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider"
 							>
-								FINISH
+								Convite para Cuidadores e Familiares
 							</h2>
 							<p class="leading-relaxed">
-								Pitchfork ugh tattooed scenester echo park
-								gastropub whatever cold-pressed retro.
+								Recurso premium que promove o engajamento
+								familiar e o acompanhamento do tratamento por
+								outras pessoas.
 							</p>
 						</div>
 					</div>
@@ -925,171 +933,19 @@
 		</div>
 	</section>
 
-	<!-- FOOTER -->
-	<footer class="text-gray-600 body-font">
-		<div
-			class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col"
-		>
-			<div
-				class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left"
-			>
-				<a
-					class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900"
-				>
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						fill="none"
-						stroke="currentColor"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						stroke-width="2"
-						class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-						viewBox="0 0 24 24"
-					>
-						<path
-							d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
-						></path>
-					</svg>
-					<span class="ml-3 text-xl">Tailblocks</span>
-				</a>
-				<p class="mt-2 text-sm text-gray-500">
-					Air plant banjo lyft occupy retro adaptogen indego
-				</p>
-			</div>
-			<div
-				class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center"
-			>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-				<div class="lg:w-1/4 md:w-1/2 w-full px-4">
-					<h2
-						class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-					>
-						CATEGORIES
-					</h2>
-					<nav class="list-none mb-10">
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>First Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Second Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Third Link</a
-							>
-						</li>
-						<li>
-							<a class="text-gray-600 hover:text-gray-800"
-								>Fourth Link</a
-							>
-						</li>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<!-- FOOTER final -->
 	<div class="bg-gray-100">
 		<div
 			class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row"
 		>
 			<p class="text-gray-500 text-sm text-center sm:text-left">
-				© 2020 Tailblocks —
+				© 2024 Aster Tech —
 				<a
-					href="https://twitter.com/knyttneve"
+					href="https://twitter.com/astertechofficial"
 					rel="noopener noreferrer"
 					class="text-gray-600 ml-1"
 					target="_blank"
-					>&#64;knyttneve</a
+					>&#64;astertechofficial</a
 				>
 			</p>
 			<span
