feat: adicionado a nova imagem e utilizando.

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -736,6 +736,8 @@
 							</p>
 						</div>
 					</div>
+
+					<!-- STEP 3 -->
 					<div class="flex relative pb-12">
 						<div
 							class="h-full w-10 absolute inset-0 flex items-center justify-center"
@@ -775,6 +777,8 @@
 							</p>
 						</div>
 					</div>
+
+					<!-- STEP 4 -->
 					<div class="flex relative pb-12">
 						<div
 							class="h-full w-10 absolute inset-0 flex items-center justify-center"
@@ -814,6 +818,8 @@
 							</p>
 						</div>
 					</div>
+
+					<!-- STEP 5 -->
 					<div class="flex relative">
 						<div
 							class="flex-shrink-0 w-10 h-10 rounded-full bg-indigo-500 inline-flex items-center justify-center text-white relative z-10"
@@ -847,10 +853,12 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- Image -->
 				<img
-					class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12"
-					src="https://dummyimage.com/1200x500"
-					alt="step"
+					class="lg:w-3/5 md:w-1/2 object-scale-down rounded-lg md:mt-0 mt-12"
+					src="../../../assets/images/Full.png"
+					alt="Full Screen Image"
 				/>
 			</div>
 		</div>
