--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="h-screen = w-screen overflow-scroll">
+	<app-loader [isLoading]="loading"></app-loader>
+	<ng-template #dialogContainer></ng-template>
 	<!-- HEADER -->
 	<header class="text-gray-600 bg-white fixed w-full z-30 top-0">
 		<div
@@ -149,7 +151,7 @@
 
 	<!-- EVNVIAR EMAIL PARA NOSSO -->
 	<section class="text-gray-600 body-font">
-		<form class="container px-5 py-24 mx-auto">
+		<div class="container px-5 py-24 mx-auto">
 			<div class="flex flex-col text-center w-full mb-12">
 				<h1
 					class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"
@@ -162,23 +164,27 @@
 					prática profissional.
 				</p>
 			</div>
-			<div
+
+			<!-- Formulario de Contato Profissional -->
+			<form
+				[formGroup]="sendContactProfessionalForm"
+				(ngSubmit)="onSubmitContactProfessional()"
 				class="flex lg:w-2/3 w-full sm:flex-row flex-col mx-auto px-8 sm:space-x-4 sm:space-y-0 space-y-4 sm:px-0 items-end"
 			>
 				<div class="relative flex-grow w-full">
-					<label
-						for="full-name"
-						class="leading-7 text-sm text-gray-600"
+					<label for="name" class="leading-7 text-sm text-gray-600"
 						>Nome Completo</label
 					>
 					<input
 						type="text"
-						id="full-name"
-						name="full-name"
+						id="name"
+						name="name"
+						formControlName="name"
 						placeholder="Sidnei de Souza Junior"
 						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
 				</div>
+
 				<div class="relative flex-grow w-full">
 					<label for="email" class="leading-7 text-sm text-gray-600"
 						>E-mail para Contato</label
@@ -187,6 +193,7 @@
 						type="email"
 						id="email"
 						name="email"
+						formControlName="email"
 						placeholder="contato@astertech.site"
 						class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 					/>
@@ -198,8 +205,8 @@
 				>
 					Solicitar
 				</button>
-			</div>
-		</form>
+			</form>
+		</div>
 	</section>
 
 	<!-- FUNCIONALIDADES -->
@@ -900,8 +907,8 @@
 				</p>
 			</div>
 			<form
-				[formGroup]="sendMenssageForm"
-				(ngSubmit)="onSubmitMenssage()"
+				[formGroup]="sendMessageForm"
+				(ngSubmit)="onSubmitMessage()"
 				class="lg:w-1/2 md:w-2/3 mx-auto"
 			>
 				<div class="flex flex-wrap -m-2">
@@ -916,6 +923,8 @@
 								type="text"
 								id="name"
 								name="name"
+								formControlName="name"
+								required
 								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 							/>
 						</div>
@@ -931,6 +940,8 @@
 								type="email"
 								id="email"
 								name="email"
+								formControlName="email"
+								required
 								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 							/>
 						</div>
@@ -945,6 +956,8 @@
 							<textarea
 								id="message"
 								name="message"
+								formControlName="message"
+								required
 								class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"
 							></textarea>
 						</div>
