--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -635,22 +635,26 @@
 								</svg> </span
 							>Gerenciamento de Estoque de Medicamentos
 						</p>
-						<button
-							class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
-						>
-							Selecionar
-							<svg
-								fill="none"
-								stroke="currentColor"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								stroke-width="2"
-								class="w-4 h-4 ml-auto"
-								viewBox="0 0 24 24"
+						<a
+							href="https://buy.stripe.com/test_4gw3ec3G99caaXe4gh"
+							target="_blank"
+							><button
+								class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
 							>
-								<path d="M5 12h14M12 5l7 7-7 7"></path>
-							</svg>
-						</button>
+								Selecionar
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2"
+									class="w-4 h-4 ml-auto"
+									viewBox="0 0 24 24"
+								>
+									<path d="M5 12h14M12 5l7 7-7 7"></path>
+								</svg>
+							</button>
+						</a>
 					</div>
 				</div>
 			</div>
