feat: adicionado e configurado alguns a mask em alguns campos.

--- a/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
+++ b/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
@@ -78,6 +78,7 @@
 						id="cpf_or_id_number"
 						name="cpf_or_id_number"
 						type="text"
+						mask="000.000.000-00"
 						autocomplete="username"
 						placeholder="Seu CPF ou RG"
 						formControlName="cpf_or_id_number"
@@ -103,6 +104,7 @@
 						id="phone_number"
 						name="phone_number"
 						type="tel"
+						mask="(00) 0 0000-0000"
 						autocomplete="phone_number"
 						placeholder="Seu Telefone"
 						formControlName="phone_number"
@@ -201,7 +203,7 @@
 					<input
 						id="weight"
 						name="weight"
-						type="text"
+						type="number"
 						autocomplete="weight"
 						placeholder="Seu Peso"
 						formControlName="weight"
@@ -223,6 +225,7 @@
 						id="height"
 						name="height"
 						type="text"
+						mask="0,00"
 						autocomplete="height"
 						placeholder="Seu Peso"
 						formControlName="height"
