fix: redirecionado para o dashboard quando salvo ou atualizado o perfil. E adicionado loading e dialog na page.

--- a/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
+++ b/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
@@ -1,4 +1,6 @@
 <ng-template #toastContainer></ng-template>
+<app-loader [isLoading]="loading"></app-loader>
+<ng-template #dialogContainer></ng-template>
 <div class="container-perfil">
 	<div class="header">
 		<img
