--- a/src/app/shared/components/list-medications/list-medications.component.html
+++ b/src/app/shared/components/list-medications/list-medications.component.html
@@ -14,6 +14,9 @@
 		</button>
 	</div>
 	<!-- Table Medications -->
+	@if (medications.length == 0) {
+	<div class="text-center text-base pt-2">Sem medicamentos cadastrados.</div>
+	}@else {
 	<div class="relative rounded-lg overflow-x-hidden border-2">
 		<table class="min-w-full divide-y divide-gray-400">
 			<thead class="bg-gray-50 sticky top-0 z-10">
@@ -56,4 +59,5 @@
 			</tbody>
 		</table>
 	</div>
+	}
 </div>
