feat: criado service para enviar mensagme e assim ajustando tambem para mostrar toda a tela e enviar pro servidor.

--- a/src/app/modules/dashboard-support/dashboard-support.component.css
+++ b/src/app/modules/dashboard-support/dashboard-support.component.css
@@ -1,4 +1,6 @@
 .dashboard-support-container {
 	height: calc(100vh - 70px);
 	width: calc(100vw - 260px);
+	overflow: auto;
+	padding-top: 70px;
 }
