--- a/src/app/modules/dashboard-support/dashboard-support.component.html
+++ b/src/app/modules/dashboard-support/dashboard-support.component.html
@@ -17,20 +17,20 @@
 			<form
 				class="form-container flex flex-wrap m-2"
 				[formGroup]="supportContactForm"
-				(ngSubmit)="onSubmitMenssageForm()"
+				(ngSubmit)="onSubmitMessage()"
 			>
 				<div class="p-2 w-full">
 					<div class="relative">
 						<label
-							for="assunt"
+							for="topic"
 							class="leading-7 text-sm text-gray-600"
 							>Assunto</label
 						>
 						<input
 							type="text"
-							id="assunt"
-							name="assunt"
-							formControlName="assunt"
+							id="topic"
+							name="topic"
+							formControlName="topic"
 							class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-blue-500 focus:bg-white focus:ring-2 focus:ring-blue-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out"
 						/>
 					</div>
