feat: ajustado o form para celulares.

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen flex-row justify-center items-center">
+<div class="flex mx-8 h-screen flex-row justify-center items-center">
 	<app-loader [isLoading]="loading"></app-loader>
 	<ng-template #dialogContainer></ng-template>
 	<div class="w-0 h-0 lg:w-7/12 lg:h-screen">
