fix: problema ao salvar e o campo peos estivesse incorreto, pois estava fazendo request como string.

--- a/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
+++ b/src/app/modules/dashboard-perfil/dashboard-perfil.component.html
@@ -205,7 +205,7 @@
 					<input
 						id="weight"
 						name="weight"
-						type="number"
+						type="text"
 						autocomplete="weight"
 						placeholder="Seu Peso"
 						formControlName="weight"
