feat: agora carrega numa outra pagina.

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -117,6 +117,7 @@
 					<a
 						routerLink="/terms-and-conditions"
 						routerLinkActive="true"
+						target="_blank"
 						class="text-blue-600 hover:text-blue-500"
 						>termos e condições</a
 					>
