feat: ajustado o nome do campo e carregando a imagem que foi salva no perfil.

--- a/src/app/modules/dashboard/components/card-info-user/card-info-user.component.html
+++ b/src/app/modules/dashboard/components/card-info-user/card-info-user.component.html
@@ -2,7 +2,7 @@
 	class="container-card-info-user flex flex-col items-center justify-center text-gray-900"
 >
 	<img
-		src="{{ user.image }}"
+		src="{{ user.image_url }}"
 		alt="Imagem do usuário"
 		class="card-info-user-image"
 	/>
