--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="dashboard-container flex flex-col p-4">
+	<app-loader [isLoading]="showLoader"></app-loader>
 	<div #toastContainer></div>
 	<div #dialogContainer></div>
 	<div class="grid grid-cols-12 gap-4">
